<resources>
    <string name="app_name">안성시 축산대기정보</string>
<!--    <string name="app_name">안성 축사 현황</string>-->
    <string name="splash_temp">안성시 축산냄새\n 스마트 ICT 모니터링</string>
    <string name="desc_splash">스플래시 이미지</string>
    <string name="prgb_text">정보를 가져오는 중...</string>

    <string name="user_agree_title">사용자 전화번호 사용 동의</string>
    <string name="user_agree_detail">앱에서 사용자 전화번호를 확인하여 "축사 운영 농장주"로 등록된 사용자의 경우 운영 중인 축사의 정보를 확인할 수 있는 웹 뷰를 제공합니다.\n일반 사용자의 경우 전화번호 접근을 거부하실 수 있으며 서비스 사용에는 아무런 지장이 없습니다.</string>
    <string name="user_agree">제공 동의</string>
    <string name="user_disagree">제공 거부</string>
    <string name="user_agree_result">전화번호 사용을 동의하셨습니다.</string>
    <string name="user_disagree_result">전화번호 사용을 거부하셨습니다.</string>
    <string name="phone_number_denied">권한 거부로 일부 기능이 제한 됩니다.\n(필수 기능 아님)</string>

    <string name="input_phone_title">농장주 로그인\n전화번호 입력</string>
    <string name="input_phone_first">010-</string>
    <string name="hint_phone">00000000</string>
    <string name="error_phone">010을 제외한 전화번호를\n정확히 입력해 주세요</string>
    <string name="error_userinfo">입력하신 번호에 해당하는 사용자가 없습니다\n번호를 확인해 주세요</string>
    <string name="phone_cancel">취소</string>
    <string name="phone_confirm">확인</string>

    <string name="drawer_menu_title">안성시 축산냄새 스마트 ICT 모니터링</string>

    <string name="current_list_url">https://livestock.kr/be/appRealList.do</string>
    <string name="week_list_url">https://livestock.kr/be/appWeekList.do</string>
    <string name="login_auth">https://livestock.kr/be/appAuthUser.do?user_phone=</string>
    <string name="group_query">\?sys_op_group_id=</string>

    <string name="msg_data_update">정보가 업데이트 되었습니다</string>
    <string name="msg_terms">이용 약관 표시 준비 중</string>
    <string name="msg_privacy">개인정보처리방침 표시 준비 중</string>


    <string name="sample_current_time">오전 10시</string>
    <string name="sample_current_value">좋음</string>
    <string name="sample_current_region">죽림리</string>
    <string name="sample_current_timestamp">11.01(수) 오전 10:00</string>
    <string name="desc_daily_status">평가 이미지</string>

    <array name="week_name">
        <item>월요일</item>
        <item>화요일</item>
        <item>수요일</item>
        <item>목요일</item>
        <item>금요일</item>
        <item>토요일</item>
        <item>일요일</item>
    </array>

    <array name="status_value">
        <item>좋음</item>
        <item>보통</item>
        <item>나쁨</item>
        <item>매우나쁨</item>
    </array>

    <string name="sample_week_day">XX월 XX일</string>
    <string name="sample_week_name">X요일</string>
    <string name="desc_week_status">평가 이미지</string>
    <string name="sample_week_value">보통</string>

    <string name="des_btn_region">지역 선택</string>

    <string name="pager_id">vpWeeklyInfo</string>

    <string name="footer_corp">©안성시</string>
    <string name="footer_terms">이용약관</string>
    <string name="footer_privacy_policy">개인정보처리방침</string>
    <string name="footer_login">농장주 로그인</string>
</resources>