<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="10">

    <TextView
        android:id="@+id/tVwRegionName"
        style="@style/MenuTextStyle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/sample_current_region" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5" />

    <ImageView
        android:id="@+id/iVwRegionStatus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:contentDescription="@string/desc_daily_status"
        app:srcCompat="@drawable/emo_good" />

    <TextView
        android:id="@+id/tVwRegionValue"
        style="@style/MenuTextStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/sample_current_value" />
</LinearLayout>